# Pathfinder

./: .env.example  README.md  index.html  package-lock.json  package.json
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  state.rs  utils.rs
src-tauri/src/clients/: helix.rs  mod.rs  openai.rs
src-tauri/src/lib/: mod.rs  utils.rs
src-tauri/src/lib/helix_client/: mod.rs
src-tauri/src/lib/openai_client/: mod.rs
src-tauri/src/lib/parsers/: docx_parser.rs  image_parser.rs  mod.rs
src-tauri/src/models/: document.rs  user.rs
src-tauri/src/parsers/: docx.rs  docx_parser.rs  image.rs  mod.rs  spreadsheet.rs  spreadsheet_parser.rs
src-tauri/src/services/: document_service.rs  mod.rs  user_service.rs
src/components/brand/: BrandLockup.tsx
src/components/data-room/: ChipBankPanel.tsx  DataRoomExplorer.tsx  DataRoomTopBar.tsx  ReportEditorPanel.tsx
src/components/deal-room/: ActivityTimelineCard.tsx  DealBriefingCard.tsx  DealRoomHeader.tsx  DealSummaryCard.tsx  PendingTasksCard.tsx  PendingTasksTimelineCard.tsx
src/components/hub/: InsightsStrip.tsx  WorkspaceCard.tsx  WorkspaceHeader.tsx  WorkspaceLayout.tsx  WorkspaceSidebar.tsx
src/components/hub/cards/: AiSearchCard.tsx  CriticalTasksCard.tsx  (+1 more)
src/components/layout/: AppFooter.tsx  AppShell.tsx
src/components/login/: LoginCard.tsx
src/components/ui/: Button.tsx  FormField.tsx  Icon.tsx
src/data/: dataRoom.ts  workspace.ts
src/hooks/: useWorkspaceSession.ts
src/pages/: DataRoomPage.tsx  DealRoomPage.tsx  HubPage.tsx  LoginPage.tsx
