[package]
name = "Pathfinder"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
default-run = "Pathfinder"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "pathfinder_lib"
path = "src/lib.rs"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
reqwest = { version = "0.12", features = ["json"] }
walkdir = "2"
tokio = { version = "1.52.2", features = ["rt", "rt-multi-thread", "macros"] }
docx-rust = "0.1.11"
pdf-extract = "0.10.0"
calamine = "0.35.0"
pptx-to-md = "0.4.0"
chrono = "0.4"
helix-rs = "0.1"
dotenvy = "0.15"
anyhow = "1.0.102"
tiktoken-rs = "0.11.0"
